fixing details page display on mobile

--- a/stylesd.css
+++ b/stylesd.css
@@ -29,16 +29,16 @@
     align-items: center;
   }
   .tittle{
-    margin: 50px 0px 10px 280px;
+    margin: 50px 0px 10px 200px;
   }
   .contents{
     display: flex;
     flex-direction: row;
-    gap: 60px;
+    gap: 150px;
     margin: 20px 280px 100px;
   }
   .title {
-   margin: 100px 100px 0px;
+   margin: 60px -80px 0px;
     position: static;
     font-size: 25px;
   }
@@ -46,6 +46,8 @@
     display: flex;
     flex-direction: row;
     gap: 5px;
+    margin-bottom: 30px;
+    margin-top: -50px;
   }
   .lang {
     background-color: lightcoral;
@@ -58,16 +60,17 @@
   }
   .title img {
     width: 20em;
-    height: 30em;
+    height: 25em;
   }
   .more {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    margin-top: 80px;
+    margin-top: 150px;
     font-size: 1.5em;
     text-align: justify;
     line-height: 20px;
+    width: 5000px;
   }
   .more p {
     line-height: 35px;
@@ -108,7 +111,7 @@
   }
 
   .title img {
-    margin-top: 20px;
+    margin-top: 0px;
     width: 350px;
     height: 400px;
   }
@@ -120,6 +123,9 @@
     font-size: 20px;
     gap: 10px;
     width: 350px;
+  }
+  .yyyy{
+    margin-top: 0px
   }
 
   .more p {
